--- a/index.html
+++ b/index.html
@@ -1424,7 +1424,13 @@ I’M! BOUT! TO! BREAK! THE! CHAIN!
   <a href="https://www.robertsspaceindustries.com/enlist?referral=STAR-KRN7-SJTX"
      target="_blank" rel="noopener noreferrer">STAR-KRN7-SJTX</a><br><br>
 
-  Donations: emailto:matthew@novakprotocol.com
+<p>
+  Donations:
+  <a href="mailto:matthew@novakprotocol.com?subject=NOVAK%20Support%20or%20Donation">
+    matthew@novakprotocol.com
+  </a>
+</p>
+
   <br>
   <br>
 
