--- a/index.html
+++ b/index.html
@@ -1395,6 +1395,9 @@ I’M! BOUT! TO! BREAK! THE! CHAIN!
   PADI 30-Year Member IDC Staff Instructor #888850 —
   <a href="https://www.padi.com" target="_blank" rel="noopener noreferrer">www.padi.com</a><br>
 <br>
+  PADI Project Aware Foundation
+  <a href="https://www.padi.com/aware target="_blank" rel="noopener noreferrer">www.padi.com/aware</a><br>
+<br>
   o7 Star Citizen Referral —
   <a href="https://www.robertsspaceindustries.com/enlist?referral=STAR-KRN7-SJTX"
      target="_blank" rel="noopener noreferrer">STAR-KRN7-SJTX</a><br><br>
