--- a/index.html
+++ b/index.html
@@ -835,11 +835,8 @@ html[data-theme="dark"] .aud-btn.active {
 
 <p style="margin-top:6px; font-size:13px; opacity:0.85;">
 🚫This public demo is for educational purposes only — NOT for HIPAA-regulated environments.
-NOVAK does not collect, store, transmit, or retain data, but user responsibility applies.
-</p>
-
-<p style="margin-top:6px; font-size:13px; opacity:0.85;">
-🚫 Never use real patients, real claims, or real medical documents here — training data only.
+  Never use real patients, real claims, or real medical documents here — training data only.
+  NOVAK does not collect, store, transmit, or retain data, but user responsibility applies.
 </p>
 
 <!-- ✅ EXAMPLE DATASETS  -->
