--- a/index.html
+++ b/index.html
@@ -743,24 +743,17 @@ html[data-theme="dark"] .aud-btn.active {
    <!-- ==================================================================== -->
   <!--  END OF PART 1 — NEXT MESSAGE (PART 2) STARTS WITH TRY-IT HASH AREA  -->
   <!-- ==================================================================== -->
-  
-  <!-- ✅ GUIDED AUTO-SCROLL WALKTHROUGH -->
-<div class="card" style="margin-top:36px;">
-  <h2 class="section-title">Guided NOVAK Walkthrough</h2>
-  <p>Let NOVAK explain itself — automatically, step-by-step.</p>
 
-  <button class="action-btn"
-          onclick="startStoryMode()"
-          style="margin-top:12px;">
-    ▶ Begin Guided Demo
-  </button>
 
- 
+    <!-- ==================remothis?======= -->
 <!-- ✅ STORY PANEL -->
 <div id="storyPanel"
      class="card"
      style="display:none; margin-top:20px; font-size:15px; line-height:1.6;">
 </div>
+
+    <!-- ==================remothisE======= -->
+
 <!-- Moved this here -->
 </div>
 
