--- a/index.html
+++ b/index.html
@@ -737,6 +737,7 @@ html[data-theme="dark"] .aud-btn.active {
     <button class="pill-btn explain-btn" onclick="showExplain('how')">👁️ How This Works</button>
   </div>
 
+</div>
   <!-- ANALOGY OUTPUT -->
   <div id="explainerOutput" class="card" style="display:none; margin-top:22px;"></div>
 
