--- a/index.html
+++ b/index.html
@@ -1093,71 +1093,83 @@ html[data-theme="dark"] .aud-btn.active {
   </p>
 </div>
 
-  <!-- ✅ Why Hashing Alone Is NOT Enough -->
-<div class="card" style="margin-top:26px;">
-  <h2 class="section-title">How Is This Different Than Today?</h2>
+<!-- ====================================================== -->
+<!-- COLLAPSIBLE: HOW IS THIS DIFFERENT THAN TODAY?         -->
+<!-- ====================================================== -->
+<div class="card" style="margin-top:28px; padding:20px;">
+  <details open>
+    <summary style="cursor:pointer; font-size:18px; font-weight:600;">
+      🔍 How Is This Different Than Today?
+    </summary>
 
-  <p>
-    Today, most systems generate hashes, signatures, logs, or encrypted traffic —
-    but none of those guarantee the <strong>correctness</strong> of automated actions.
-  </p>
+    <div style="margin-top:16px; font-size:15px; line-height:1.55;">
 
-  <ul style="margin-left:20px; margin-top:12px; margin-bottom:16px;">
-    <li>✅ Hashing proves data hasn't changed — <strong>after</strong> execution</li>
-    <li>✅ TLS/SSL protects communication — not decision integrity</li>
-    <li>✅ Blockchain records history — it cannot stop bad actions</li>
-    <li>✅ Logging documents failure — it does not prevent it</li>
-    <li>✅ Audits require humans — long after harm already occurred</li>
-  </ul>
+      <p>
+        Today, most systems generate hashes, signatures, logs, or encrypted traffic — but none of those guarantee the 
+        <strong>correctness</strong> of automated actions.
+      </p>
 
-  <p style="font-weight:600; margin-bottom:12px;">
-    NOVAK is different:
-  </p>
+      <ul>
+        <li>✅ Hashing proves data hasn't changed — <strong>after</strong> execution</li>
+        <li>🔐 TLS/SSL protects communication — <strong>not</strong> decision integrity</li>
+        <li>⛓ Blockchain records history — it cannot stop bad actions</li>
+        <li>📘 Logging documents failure — it does not prevent it</li>
+        <li>🧍 Audits require humans — long after harm already occurred</li>
+      </ul>
 
-  <ul style="margin-left:20px; margin-bottom:4px; font-weight:600;">
-    <li>🚫 No cryptographic proof → system is blocked</li>
-    <li>🧩 Input, rule & output must cryptographically match</li>
-    <li>🛑 Prevents fraud, corruption, glitches & silent automation failure</li>
-    <li>🧾 Generates tamper-proof execution receipts instantly</li>
-  </ul>
+      <h4 style="margin-top:18px;">NOVAK is different:</h4>
+      <ul>
+        <li>🚫 <strong>No cryptographic proof → system is blocked</strong></li>
+        <li>🌟 <strong>Input, rule & output must cryptographically match</strong></li>
+        <li>🛡 <strong>Prevents fraud, corruption, glitches & silent automation failure</strong></li>
+        <li>📜 <strong>Generates tamper-proof execution receipts instantly</strong></li>
+      </ul>
 
-  <p style="margin-top:14px;">
-    Instead of trusting — NOVAK <strong>verifies before action</strong>.
-  </p>
+      <p>
+        Instead of trusting — NOVAK <strong>verifies before action.</strong>
+      </p>
+
+    </div>
+  </details>
 </div>
 
-<!-- ========================================= -->
-<!-- Why Hasn’t Anyone Built This Before?       -->
-<!-- ========================================= -->
+<!-- ====================================================== -->
+<!-- COLLAPSIBLE: WHY HASN’T ANYONE BUILT NOVAK BEFORE?     -->
+<!-- ====================================================== -->
+<div class="card" style="margin-top:28px; padding:20px;">
+  <details>
+    <summary style="cursor:pointer; font-size:18px; font-weight:600;">
+      🤔 Why Hasn’t Anyone Built NOVAK Before?
+    </summary>
 
-<div class="card" style="margin-top:32px;">
-  <h2 class="section-title">Why Hasn’t Anyone Built NOVAK Before?</h2>
+    <div style="margin-top:16px; font-size:15px; line-height:1.55;">
 
-  <p>NOVAK.....looks obvious once you see it. </p>
-  <br>
-  <p>But here’s the truth:</p>
+      <p>NOVAK… looks obvious once you see it.</p>
 
-  <ul style="margin-left:20px; margin-top:12px;">
-    <li>✔ Nobody does <strong>Proof-Before-Action</strong></li>
-    <li>✔ Nobody binds <strong>input → rule → output</strong> cryptographically</li>
-    <li>✔ Nobody performs <strong>local, real-time integrity verification</strong></li>
-    <li>✔ Nobody applies this to <strong>AI, robotics, finance, VA claims, or government systems</strong></li>
-    <li>✔ Nobody provides <strong>cryptographic receipts before harm occurs</strong></li>
-  </ul>
+      <p>But here’s the truth:</p>
 
-  <p style="margin-top:14px;">
-    Why?
-    Because the entire industry copied <strong>blockchain</strong>, which only verifies 
-    <em>after things happen</em>.
-  </p>
+      <ul>
+        <li>✔️ Nobody does <strong>Proof-Before-Action</strong></li>
+        <li>✔️ Nobody binds <strong>input → rule → output</strong> cryptographically</li>
+        <li>✔️ Nobody performs <strong>local, real-time integrity verification</strong></li>
+        <li>✔️ Nobody applies this to <strong>AI, robotics, finance, VA claims, or government systems</strong></li>
+        <li>✔️ Nobody provides <strong>cryptographic receipts before harm occurs</strong></li>
+      </ul>
 
-  <p style="margin-top:10px;">
-    Nobody thought to require systems to <strong>prove correctness before acting</strong>.
-  </p>
+      <p>
+        Why? Because the entire industry copied <strong>blockchain</strong>, 
+        which only verifies <em>after things happen</em>.
+      </p>
 
-  <p style="margin-top:16px; font-weight:600;">
-    That is the NOVAK invention.
-  </p>
+      <p>
+        Nobody thought to require systems to 
+        <strong>prove correctness before acting.</strong>
+      </p>
+
+      <p><strong>That is the NOVAK invention.</strong></p>
+
+    </div>
+  </details>
 </div>
 
 <<!-- ========================================= -->
