--- a/index.html
+++ b/index.html
@@ -1215,7 +1215,7 @@ html[data-theme="dark"] .aud-btn.active {
       <h3 style="font-size:17px; margin-bottom:8px;">🔧 What Packet Sniffing Sees (Technical)</h3>
 
       <p>
-        Sniffers like Wireshark or tcpdump can observe:
+        Sniffers can observe:
       </p>
 
       <ul>
