--- a/index.html
+++ b/index.html
@@ -1097,7 +1097,7 @@ html[data-theme="dark"] .aud-btn.active {
 <!-- COLLAPSIBLE: HOW IS THIS DIFFERENT THAN TODAY?         -->
 <!-- ====================================================== -->
 <div class="card" style="margin-top:28px; padding:20px;">
-  <details open>
+  <details>
     <summary style="cursor:pointer; font-size:18px; font-weight:600;">
       🔍 How Is This Different Than Today?
     </summary>
@@ -1108,7 +1108,7 @@ html[data-theme="dark"] .aud-btn.active {
         Today, most systems generate hashes, signatures, logs, or encrypted traffic — but none of those guarantee the 
         <strong>correctness</strong> of automated actions.
       </p>
-
+<br>
       <ul>
         <li>✅ Hashing proves data hasn't changed — <strong>after</strong> execution</li>
         <li>🔐 TLS/SSL protects communication — <strong>not</strong> decision integrity</li>
