--- a/index.html
+++ b/index.html
@@ -796,21 +796,41 @@ html[data-theme="dark"] .aud-btn.active {
 <div class="card" style="margin-top:38px;">
   <h2 class="section-title">Try It — Prove Integrity Yourself</h2>
 
-  <br>
-  <p>If <u>you</u> type exactly <b>TEST</b>, all in capitals, in the below text field, what SHA-256 will ouput in the Cryptographic Hashes area below the example datasets is:</p>
-  <br>
-  <p>TEST  → 94ee059335e587e501cc4bf90613e0814f00a7b08bc7c648fd865a2af6a22cc2</p>
-  <br>
-  <p>Change one thing and it all changes</p>
-  <br>
-  <p>Test  → 532eaabd9574880dbf76b9b8cc00832c20a6ec113d682299550d7a6e0f345e25</p>
-  <p>test  → 9f86d081884c7d659a2feaa0c55ad015a3bf4f1b2b0b822cd15d6c15b0f00a08</p>
-  <p>tEsT  → 876c5e143c421959adff3ed91b82556c433a2f79b6369e70592d2c9dc73455ce</p>
-  <br>
-  <p>
-    Type, paste, or modify anything below — NOVAK instantly generates cryptographic hashes locally
-    using your device. Nothing is stored, logged, transmitted, or uploaded.
-  </p>
+<!-- =============================================== -->
+<!-- ✅ COLLAPSIBLE TEST EXAMPLE (DEFAULT CLOSED) -->
+<!-- =============================================== -->
+
+<details class="novak-collapse" style="margin-top:32px;">
+  <summary style="cursor:pointer; font-size:18px; padding:12px 0;">
+    🧪 TEST Example — Click to Expand
+  </summary>
+
+  <div class="card" style="padding:22px; margin-top:12px;">
+
+    <h2 class="section-title" style="font-size:22px;">Try It — Prove Integrity Yourself</h2>
+
+    <p>If you type exactly <strong>TEST</strong>, all in capitals, in the below text field, what SHA-256 will output in the Cryptographic Hashes area below the example datasets is:</p>
+
+    <p><strong>TEST</strong> → 94ee059335e587e501cc4bf90613e0814f00a7b08bc7c648fd865a2af6a22c2</p>
+
+    <p>Change one thing and it all changes</p>
+
+    <p>
+      Test → 532eaabd9574880dbf76b9b8cc00832c20a6ec113d682299550d7a6e0f345e25<br>
+      test → 9f86d081884c7d659a2feaa0c55ad015a3bf4f1b2b0b822cd15d6c15b0f00a08<br>
+      tEsT → 876c5e143c421959adff3ed91b82556c433a279b6369e70592d2c9dc73455ce
+    </p>
+
+    <p>Type, paste, or modify anything below — NOVAK instantly generates cryptographic hashes locally using your device. Nothing is stored, logged, transmitted, or uploaded.</p>
+
+    <!-- Your input box stays exactly as-is -->
+    <textarea id="hashInput"
+              placeholder="Example: VA claim, invoice, VIN, contract, JSON, SQL, XML..."
+              style="width:100%; height:200px; margin-top:14px; font-size:14px;"></textarea>
+
+  </div>
+</details>
+
   
   <textarea id="novakInput"
     placeholder="Example: VA claim, invoice, VIN, contract, JSON, SQL, XML..."
@@ -859,7 +879,7 @@ html[data-theme="dark"] .aud-btn.active {
   <!-- ✅ AUTO-VERIFICATION TOGGLE -->
 <div class="card" style="margin-top:32px;">
   <label style="display:flex; align-items:center; gap:10px; font-size:16px;">
-    <input type="checkbox" id="autoVerifyToggle" checked>
+    <input type="checkbox" id="autoVerifyToggle" unchecked>
     <strong>Enable Proof-Before-Action Engine (NOVAK Auto-Verification)</strong>
   </label>
   <p style="margin-top:6px; font-size:14px; opacity:0.8;">
